# literature-notes

./: .foam  .gitignore  .obsidian  AGENTS.md  AMPL.md  API_TROUBLESHOOTING.md  Agni.md  Akshara.md  Amarakosham.md  Aryan Invasion Theory.md  Ashoka.md  Astadhyayi.md  AstangaSangraha.md  Atreya.md  Ayurvedam.md  AyurvedicRemedies.md  Bantu reethi Kolu.md  Bhuja koti karani nyayam.md  Bill joy.md  Brihadesi.md  Budhi.md  CNAME  Carnatic music.md  Comprehensive_Shannon_Entropy_Vikalpa_Research.md  DOCKER_SETUP_GUIDE.md  Dakshinayana.md  Dennis Ritchie.md  Entropy_Vikalpa_Research_Abstract.md  Friday cleaning.md  Gemfile  INDEX.md  Lattice-based encryption.md  MIGRATION_COMPLETE.md  MIGRATION_SUMMARY.md  Maintaining code base.md  Makefile  Marthanda Varma.md  Max Muller.md  Nada.md  Niruktha.md  (+105 more)
.cache/: api-runner-browser-plugins.js  api-runner-ssr.js  babelState.json  schema.gql  sync-requires.js  tmp-41064-h9jDl5CD2xNc  tmp-41064-kMciUJtyknnl  tmp-41382-aLA0QJD2hHc1  tmp-41382-kADtLr3YONNj  tmp-41550-JilLXU25WXF0  tmp-41550-U6M5IIOxcRi7
.obsidian/: graph.json  (+1 more)
tools/: README.md  check_backlinks.py  clean_logseq_markdown.py  pyproject.toml
tools/hooks/: pre-commit
tools/scripts/: analyze_links.py  backfill_wikilinks.py  build_database.py  build_forest.py  generate_site.py  run_api.py  search_notes.py
tools/src/api/: debug.py
tools/src/generators/: knowledge_synthesis.py
tools/src/knowledge_graph/: clean_builder.py
tools/src/utils/: fix_content.py
tools/src/visualization/: copy_to_pages.py  graphs.py
tools/src/zettelkasten/: core.py  search.py
(+1846 files in other folders)
