[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "literature-notes-tools"
version = "1.0.0"
description = "Knowledge management tools for Zettelkasten-based literature notes"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "Naren Mudivarthy"}
]
dependencies = [
    "networkx>=2.6.0",
    "matplotlib>=3.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
zk-build = "scripts.build_database:main"
zk-search = "scripts.search_notes:main"
zk-forest = "scripts.build_forest:main"
zk-links = "scripts.analyze_links:main"
zk-generate = "scripts.generate_site:main"
zk-api = "scripts.run_api:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.ruff]
line-length = 100
target-version = "py39"
